集成  hibernate lambda 查询库

--- a/example/src/main/resources/config.properties
+++ b/example/src/main/resources/config.properties
@@ -3,7 +3,7 @@ mysql.path=D:\\Program Files (x86)\\EasyPHP-DevServer-14.1VC11\\binaries\\mysql\
 #mysql.dbname=cj_edu_db
 #jdbc c3p0 config
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://10.110.111.231:3306/shiro2?useUnicode=true&characterEncoding=utf-8
+jdbc.url = jdbc:mysql://127.0.0.1:3306/bd_test?useUnicode=true&characterEncoding=utf-8
 jdbc.username = admin
 jdbc.password =123456
 
