添加 Lambda  Hibernate 查询支持

--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,7 @@
         <dependency>
             <groupId>com.github.xuejike</groupId>
             <artifactId>hibernate-lambda-query</artifactId>
-            <version>0.1.2</version>
+            <version>0.1.4-bate1</version>
         </dependency>
 
 
